--- a/src/modules/Common/components/Modal/BaseModal/BaseModal.scss
+++ b/src/modules/Common/components/Modal/BaseModal/BaseModal.scss
@@ -6,13 +6,20 @@
   z-index: 10;
   width: 100%;
   height: 100%;
+  visibility: hidden;
+
+  &--open {
+    visibility: unset
+  }
 
   &__overlay {
     @extend .modal;
+    visibility: hidden;
 
     &--open {
       top: 0;
       background-color: rgb(45,45,50,0.5);
+      visibility: unset;
     } 
   }
 }
